--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 
 
-    <script type="application/javascript" src="lib/bundle.js"></script>
+    <script type="application/javascript" src="bundle.js"></script>
   </head>
 
   <body>
