--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
   </head>
-
-
-    <script type="application/javascript" src="bundle.js"></script>
+    <script type="application/javascript" src="./bundle.js"></script>
   </head>
 
   <body>
