--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
     <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
+    <link rel='stylesheet' href='assets/style.css' />
   </head>
     <script type="application/javascript" src="./bundle.js"></script>
   </head>
 
   <body>
+    <h1>Cluck Cluck Moo!</h1>
     <canvas id="gameCanvas" width='760px' height='510px'></canvas>
   </body>
 </html>
