--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
     <script src="https://code.createjs.com/tweenjs-0.6.2.min.js"></script>
     <script src="https://code.createjs.com/soundjs-0.6.2.min.js"></script>
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
+    <script src="https://use.fontawesome.com/010e069ff9.js"></script>
     <link rel='stylesheet' href='assets/style.css' />
-  </head>
     <script type="application/javascript" src="./bundle.js"></script>
   </head>
 
   <body>
     <h1>Cluck Cluck Moo!</h1>
     <canvas id="gameCanvas" width='760px' height='510px'></canvas>
+    <footer>
+      <h2><a href='http://danieldyssegaardkallick.com'>By Daniel Dyssegaard Kallick</a></h2>
+      <a href='https://github.com/keevie'><i class="fa fa-github" aria-hidden="true"></i></a>
+      <a href='https://www.linkedin.com/in/danieldyssegaardkallick/'><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    </footer>
   </body>
 </html>
