--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
     <script src="https://use.fontawesome.com/010e069ff9.js"></script>
     <link rel='stylesheet' href='assets/style.css' />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="application/javascript" src="./bundle.js"></script>
   </head>
 
   <body>
     <h1>Cluck Cluck Moo!</h1>
     <canvas id="gameCanvas" width='760px' height='510px'></canvas>
+    <div id='mainProgress'>
+      <label>Loading...</label>
+      <div class='progress'></div>
+    </div>
     <footer>
       <h2><a href='http://danieldyssegaardkallick.com'>By Daniel Dyssegaard Kallick</a></h2>
       <a href='https://github.com/keevie'><i class="fa fa-github" aria-hidden="true"></i></a>
