--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       <label>Loading...</label>
       <div class='progress'></div>
     </div>
+    <div id='Instructions'>
+      <p>How to Play</p>
+      <p>Click to jump</p>
+      <p>Move with mouse</p>
+      <p>Click to start</p>
+    </div>
     <footer>
       <h2><a href='http://danieldyssegaardkallick.com'>By Daniel Dyssegaard Kallick</a></h2>
       <a href='https://github.com/keevie'><i class="fa fa-github" aria-hidden="true"></i></a>
