high score in cookie

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
       <p>Move with mouse</p>
       <p>Click to start</p>
     </div>
+    <div id='high-score'>
+    </div>
     <footer>
       <h2><a href='http://danieldyssegaardkallick.com'>By Daniel Dyssegaard Kallick</a></h2>
       <a href='https://github.com/keevie'><i class="fa fa-github" aria-hidden="true"></i></a>
