style instructions and high score

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://code.createjs.com/preloadjs-0.6.2.min.js"></script>
     <script src="https://use.fontawesome.com/010e069ff9.js"></script>
     <link rel='stylesheet' href='assets/style.css' />
+    <link href="https://fonts.googleapis.com/css?family=Ranchers" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="application/javascript" src="./bundle.js"></script>
   </head>
@@ -19,9 +20,11 @@
       <div class='progress'></div>
     </div>
     <div id='Instructions'>
-      <p>How to Play</p>
+      <h2>How to Play</h2>
       <p>Click to jump</p>
       <p>Move with mouse</p>
+      <p>Cows double your score</p>
+      <p>Get as high as you can!</p>
       <p>Click to start</p>
     </div>
     <div id='high-score'>
