mute buttons, not ideal ui yet

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
       <p>Move with mouse</p>
       <p>Cows double your score</p>
       <p>Get as high as you can!</p>
+      <p>Press m to toggle music</p>
+      <p>Press s to toggle sound effects</p>
       <p>Click to start</p>
     </div>
     <div id='high-score'>
